--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,8 @@
 VITE_BUILD_MOCK = false
 
 # 接口地址
-VITE_API_BASE_URL = '47.100.198.147:20070'
-VITE_API_WS_URL = 'wss://47.100.198.147:20070'
+VITE_API_BASE_URL = 'http://47.100.198.147:20070'
+VITE_API_WS_URL = 'wss://api.continew.top'
 
 # 地址前缀
 VITE_BASE = '/'
