--- a/.env.development
+++ b/.env.development
@@ -3,9 +3,8 @@
 VITE_API_PREFIX = '/api'
 
 # 接口地址
-VITE_API_BASE_URL = '47.100.198.147:20070'
+VITE_API_BASE_URL = 'http://localhost:8000'
 
-# 接口地址 (WebSocket)
 VITE_API_WS_URL = 'ws://localhost:8000'
 
 # 地址前缀
