--- a/.env.production
+++ b/.env.production
@@ -4,8 +4,10 @@
 VITE_BUILD_MOCK = false
 
 # 接口地址
-VITE_API_BASE_URL = 'http://47.100.198.147:20070'
-VITE_API_WS_URL = 'wss://api.continew.top'
+#TODO 更改接口地址为'http://47.100.198.147:20070'
+VITE_API_BASE_URL = 'http://localhost:8000'
+# TODO 更改接口(WebSocket)
+VITE_API_WS_URL = 'ws://localhost:8000'
 
 # 地址前缀
 VITE_BASE = '/'
