--- a/.env.development
+++ b/.env.development
@@ -2,9 +2,10 @@
 # 接口前缀
 VITE_API_PREFIX = '/api'
 
-# 接口地址
+# 接口地址(默认本地地址'http://localhost:8000')
 VITE_API_BASE_URL = 'http://localhost:8000'
 
+# 接口地址 (WebSocket)
 VITE_API_WS_URL = 'ws://localhost:8000'
 
 # 地址前缀
